mobile nav fixes (#384)
* fix: mobile nav not showing on some pages

* fix: items in mobile nav should not be reachable with keyboard/screenreader when not visible

* fix: add focus style to mobile nav toggle button for better accessibility

--- a/src/styles/includes/_navigation.scss
+++ b/src/styles/includes/_navigation.scss
@@ -90,21 +90,21 @@
 		}
 	}
 
-	&.is-animate-out {
+	#mobile-navigation {
+		display: none;
+	}
+
+	&.is-mobile-nav-hidden {
 		transform: translateY(-10rem);
-	}
-
-	&.is-animate-in {
-		transform: translateY(0);
-	}
-
-	&.is-top {
-		transform: translateY(0);
 	}
 
 	&.is-mobile-active {
 		body {
 			overflow: hidden;
+		}
+
+		#mobile-navigation {
+			display: block;
 		}
 
 		.nav__offset-panel {
@@ -263,6 +263,11 @@
 
 			&:focus {
 				outline: none;
+
+				.dot-wrapper {
+					outline: 0.3rem solid $color-secondary--yellow;
+					outline-offset: 0.5rem;
+				}
 			}
 		}
 
